# web_modul_5

./: README.md  constants.py  pyproject.toml  utils.py
client/: index.html  main.css
server/: constants.py  main.py  ws.py
